<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/stock_activity_toolbar"
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/stock_list">

    </android.support.v7.widget.Toolbar>


    <RelativeLayout
        android:id="@+id/main_relative_layout"
        style="@style/MainPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/graph_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/refreshed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="14sp" />

            <com.tomk.android.stockapp.GraphChart
                android:id="@+id/Graph"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="0dp"
                android:background="#3D3D3D"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp" />

            <LinearLayout
                android:id="@+id/buttonsPanel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/bar_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="9sp"
                    android:text="@string/BAR_GRAPH" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/line_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="9sp"
                    android:text="@string/LINE_GRAPH" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/area_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="9sp"
                    android:text="@string/AREA_GRAPH" />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/candle_graph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textSize="9sp"
                    android:text="@string/Candle_Graph" />


            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/recycler_views"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/graph_panel"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_stock_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <LinearLayout
                android:id="@+id/company_overview_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="25dp"
                    android:textColor="@android:color/holo_green_light"
                    android:text="Company name"
                    android:textSize="20sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_company_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:scrollbars="vertical"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/fabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            >



        <LinearLayout
            android:id="@+id/fab3_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fab3_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/Enter_api_kay"
                android:textSize="20sp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fabSize="mini"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                app:srcCompat="@android:drawable/ic_btn_speak_now" />
        </LinearLayout>




            <LinearLayout
                android:id="@+id/fab2_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fab2_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:text="@string/Enter_stock_symbol"
                    android:textSize="20sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    app:srcCompat="@android:drawable/ic_btn_speak_now" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fab1_lay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fab1_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:text="@string/Save_in_database"
                    android:textSize="20sp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:layout_gravity="end"
                    android:layout_margin="10dp"
                    app:srcCompat="@android:drawable/ic_btn_speak_now" />
            </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            android:layout_gravity="end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_baseline_settings_24" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible" />

    </RelativeLayout>



</LinearLayout>
